# Oracle

./: LICENSE  README.md  pyproject.toml  requirements.txt  run_test1.py  run_test2.py  run_training.py
data/descriptions/: test2_unseen_descriptions_example.json
fine_tuning/: README.md  finetune_drinking_eating.py  finetune_fight_nofight.py  finetune_lying_posture.py  folder_adapter_finetune.py  integration_manifest.json
fine_tuning/legacy_annotation_based/: drinking_eating_adapter_finetune_v11.py  fight_nofight_adapter_finetune_v12.py  lying_posture_adapter_finetune_v11.py
fine_tuning/run_examples/: run_drinking_eating_nohup.sh  run_fight_nofight_nohup.sh  run_lying_posture_nohup.sh
scripts/: test1_example.sh  test1_nohup_example.sh  test2_example.sh  test2_nohup_example.sh  train_example.sh  train_nohup_example.sh
src/oracle/: __init__.py  cli.py  constants.py  dataset.py  eval_cli.py  evaluation.py  external_evaluation.py  features.py  model.py  prompts.py  trainer.py  utils.py
src/oracle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_external_evaluation.py  test_model.py  test_prompts.py
