[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oracle"
version = "0.2.0"
description = "ORACLE: CLIP-based contrastive learning and description generalization evaluation for pig behavior recognition."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "Pillow>=9.0",
    "opencv-python>=4.7",
    "scikit-learn>=1.2",
    "tqdm>=4.65",
    "torch>=2.0",
    "torchvision>=0.15",
    "ftfy",
    "regex",
    "clip @ git+https://github.com/openai/CLIP.git",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
oracle-train = "oracle.cli:main"
oracle-test1 = "oracle.eval_cli:main_test1"
oracle-test2 = "oracle.eval_cli:main_test2"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
